chore: gradle and misc update